# donor_game

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/: main.py
src/game/: donor_game.py  evolution.py  initialization.py  pairing.py  prompts.py  selection.py
src/metrics/: aggregations.py
src/models/: agent.py  simulation_data.py
src/utils/: checkpoint.py  helpers.py  llm.py  logger.py  token_counter.py
