[tool.poetry]
name = "llm-donor-game"
version = "0.1.0"
description = ""
authors = ["Martin V <martin.vrany@flintworks.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
google-generativeai = "^0.8.4"
scipy = "^1.15.2"
numpy = "^2.2.3"
matplotlib = "^3.10.1"
dotenv = "^0.9.9"
openai = "^1.65.4"
anthropic = "^0.49.0"
tiktoken = "^0.9.0"
pandas = "^2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
